maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:53: error: not found: value abs
    if (sol>=abs(sol-getIndication(x,y-1))>=2){
             ^ShortestPathMaze:58: error: not found: value abs
    if (sol>=abs(sol-getIndication(x-1,y))>=2){
             ^ShortestPathMaze:63: error: not found: value abs
    if (sol>=abs(sol-getIndication(x+1,y))>=2){
             ^ShortestPathMaze:68: error: not found: value abs
    if (sol>=abs(sol-getIndication(x,y-1))>=2){
             ^